Bug 413100 - Updating collection creates a momentary duplicate album entry
Summary: Updating collection creates a momentary duplicate album entry
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.4.2
Platform: Manjaro Linux
: NOR minor
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-17 16:37 UTC by coliflor
Modified: 2019-11-18 21:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.12.0
Sentry Crash Report:


Attachments
duplicate albums (326.42 KB, image/png)
2019-10-17 16:37 UTC, coliflor
Details

Note You need to log in before you can comment on or make changes to this bug.
Description coliflor 2019-10-17 16:37:27 UTC
Created attachment 123282 [details]
duplicate albums

SUMMARY
Updating collection (while in the album tab) creates a momentary duplicate album entry.


STEPS TO REPRODUCE
1. be in the album tab
2. press update music database (duplicate entries spawn)
3. switch tabs(duplicate entries disappear and all is as expected)

OBSERVED RESULT
While being at the Album tab and updating the database it will spawn another album

EXPECTED RESULT
Just a refresh effect

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version:
Comment 1 Nate Graham 2019-10-17 16:40:35 UTC
Confirmed. I'd been meaning to report this; thanks for doing it for me!
Comment 2 Matthieu Gallien 2019-11-14 20:45:16 UTC
Thanks for the report and confirmation.

I will work on a fix for this bug.
Comment 3 Matthieu Gallien 2019-11-18 20:52:20 UTC
Git commit 026b1c87ebdb7da1d3a06d55475661094b20ad5d by Matthieu Gallien.
Committed on 18/11/2019 at 16:41.
Pushed by mgallien into branch 'master'.

put back the cleaning of DataModel when database is cleared

M  +2    -0    src/modeldataloader.cpp
M  +2    -0    src/modeldataloader.h
M  +2    -0    src/models/datamodel.cpp
M  +1    -0    src/musiclistenersmanager.cpp
M  +2    -0    src/musiclistenersmanager.h

https://invent.kde.org/kde/elisa/commit/026b1c87ebdb7da1d3a06d55475661094b20ad5d
Comment 4 Matthieu Gallien 2019-11-18 21:12:21 UTC
Oops I have merged it in the wrong branch. Sorry for that. I will fix that.
Comment 5 Matthieu Gallien 2019-11-18 21:16:00 UTC
Git commit 19e101624da677965720f40d3a703f5e69fce67e by Matthieu Gallien.
Committed on 18/11/2019 at 21:13.
Pushed by mgallien into branch 'release/19.12'.

put back the cleaning of DataModel when database is cleared

M  +2    -0    src/modeldataloader.cpp
M  +2    -0    src/modeldataloader.h
M  +2    -0    src/models/datamodel.cpp
M  +1    -0    src/musiclistenersmanager.cpp
M  +2    -0    src/musiclistenersmanager.h

https://invent.kde.org/kde/elisa/commit/19e101624da677965720f40d3a703f5e69fce67e