put back the cleaning of DataModel when database is cleared

BUG: 413100